--- a/package.json
+++ b/package.json
@@ -3,16 +3,31 @@
   "version": "1.0.0",
   "description": "The Odin Project - Restaurant Page Exercise",
   "main": "index.js",
+  "prettier": {
+    "singleQuote": true
+  },
   "scripts": {
     "build": "webpack --config webpack.prod.js",
     "dev": "webpack serve --open --config webpack.dev.js",
+    "lint": "npx eslint",
+    "lint:fix": "npm run lint -- --fix",
+    "prettier": "npx prettier --check .",
+    "prettier:fix": "npm run prettier -- --write",
+    "format": "npm run prettier:fix && npm run lint:fix",
     "deploy": "git subtree push --prefix dist origin gh-pages"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.9.1",
+    "@stylistic/eslint-plugin-js": "^2.7.2",
     "css-loader": "^7.1.2",
+    "eslint": "^9.9.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-n": "^17.10.2",
+    "globals": "^15.9.0",
     "html-webpack-plugin": "^5.6.0",
+    "prettier": "3.3.3",
     "raw-loader": "^4.0.2",
     "style-loader": "^4.0.0",
     "webpack": "^5.93.0",
